Fix Nav bar layout bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,12 +25,6 @@ a {
     text-decoration: none;
 }
 
-.container {
-    max-width: 98rem;
-    margin: 0 auto;
-    padding: 0 2.2rem;
-}
-
 .contact-bg {
     border-radius: 50px;
     margin-left: auto;
